--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "delta-rest-client": "^1.0.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
